[package]
name = "lsb2ynab"
version = "0.1.0"
edition = "2021"
description = "Convert CSV files exported from Lån & Spar Bank to YNAB compatible CSV files."

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.11", features = ["derive"] }
csv = "1.3.0"
rfd = "0.14.1"
serde = { version = "1.0.204", features = ["derive"] }
